<?xml version="1.0" encoding="utf-8"?>
<top.biduo.exchange.customview.intercept.WonderfulScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_main"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/llMyinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/account"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />


                <ImageView
                    android:id="@+id/llSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/icon_settings" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/line_top"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp">

                <top.biduo.exchange.customview.CircleImageView
                    android:id="@+id/ivHeader"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_default_header" />

                <LinearLayout
                    android:id="@+id/rl_user_top_un_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_logged_in"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/welcome_to"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="center"
                        android:src="@drawable/icon_into" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_user_top"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="小六子"
                        android:textColor="@color/Yellow"
                        android:textSize="16sp" />


                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_user_name"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tv_user_name"
                        android:textColor="@color/white"
                        android:textSize="13sp" />-->


                    <TextView
                        android:id="@+id/tv_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_user_name"
                        android:layout_marginTop="8dp"
                        android:text="UID:666666"
                        android:textColor="@color/white" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/welcome_to"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llSafe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:paddingTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_safe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/my_safe"
                    android:gravity="center"
                    android:textColor="@color/blue_main"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCredit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:paddingTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_credit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/id_credit"
                    android:textColor="@color/blue_main"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNotice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_notice" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/message_details"
                    android:gravity="center"
                    android:textColor="@color/blue_main"
                    android:textSize="13sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llFee"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_fee" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/service_fee"
                    android:textColor="@color/blue_main"
                    android:gravity="center"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_seller_credit"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/icon_bg_01"
                android:gravity="center"
                android:text="@string/seller_credit"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_candy_box"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/icon_bg_01"
                android:gravity="center"
                android:text="@string/candy_box"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llPromotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTop"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_tuiguang"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuijian1"
                android:textColor="@color/home_ziti1"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuijian2_1"
                    android:textColor="@color/home_ziti1"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/app_name"
                    android:textColor="@color/my_zi"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuijian2_2"
                    android:textColor="@color/home_ziti1"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</top.biduo.exchange.customview.intercept.WonderfulScrollView>
